--- a/Files to replace/mopidy.conf
+++ b/Files to replace/mopidy.conf
@@ -122,8 +122,8 @@ enabled = true
 enabled = true
 username = 
 password = 
-client_id = 
-client_secret = 
+client_id = e31f747ffb9f434ab466792e6c7f5a6a
+client_secret = 65704cb4f9e841e7b2601882ced44e89
 #bitrate = 160
 #volume_normalization = true
 #private_session = false
